Fix alignment on ipad sized devices.

--- a/wp-content/themes/custom/style.css
+++ b/wp-content/themes/custom/style.css
@@ -2128,6 +2128,13 @@ th-data appears to left of the <td> when in mobile
 
 /*# sourceMappingURL=mobile_tables.css.map */
 
+/* crest and login align correctly for ipad sized devices */
+
+@media (min-device-width: 768px) and (max-device-width: 1024px) {
+  #crest, .login-button {
+    padding-left: 20px;
+  }
+}
 
 /* responsive calendar / responsive tables */
 
@@ -2445,7 +2452,9 @@ only screen and (min-device-pixel-ratio: 2) and (max-width: 1024px),
 only screen and (min-resolution: 192dpi) and (max-width: 1024px), 
 only screen and (min-resolution: 2dppx) and (max-width: 1024px) {
 
-  body, p, a {
+  body, p, a, 
+  #cssmenu > ul > li > ul > li > a, 
+  #cssmenu ul li a {
     font-size: 105%;
   }
 
